--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -232,7 +232,17 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
-\input{md__r_e_a_d_m_e}
+\chapter{Class Index}
+\input{annotated}
+\chapter{File Index}
+\input{files}
+\chapter{Class Documentation}
+\input{class_particle}
+\chapter{File Documentation}
+\input{_particle_8h}
+\input{_particle_8h_source}
+\input{main_8cpp}
+\input{_particle_8cpp}
 %--- End generated contents ---
 % Index
   \backmatter
